# Sigil

./: .gitattributes  .gitignore  Cargo.toml  README.md  WHY_SIGIL.md  deny.toml
.github/workflows/: ci.yml  release.yml
docs/: ABI.md  ASSURANCE.md  LANGUAGE.md  PRODUCTION.md  PRODUCTION_READINESS.md  RESIDUAL_RISK_PROCESS.md  RUNBOOKS.md  RUNTIME.md  SOUNDNESS.md  VERSIONING.md  WHY_SIGIL.md
examples/: circuit.sigil  counter.sigil  ingest.sigil  pipeline.sigil  resilient.sigil
examples/avionics/: README.md  attitude_control.sigil
examples/circuit/: README.md  circuit.sigil
examples/clearinghouse/: README.md  clearing.sigil
examples/counter/: README.md  counter.sigil
examples/distributed/: README.md  order_fleet.sigil
examples/finance/: README.md  clearing.sigil
examples/ingest/: README.md  ingest.sigil
examples/level2/: README.md  slo_and_hold.sigil
fuzz/: Cargo.toml  README.md  gen.py  metamorphic.sh  prover_gen.py  prover_soundness.sh  run.sh
fuzz/corpus/codegen/: basic
fuzz/corpus/level3/: basic
fuzz/corpus/level4/: basic
fuzz/corpus/parser/: basic
fuzz/corpus/topology/: basic
fuzz/fuzz_targets/: checker.rs  codegen.rs  level3.rs  level4.rs  parser.rs  topology.rs
scripts/: check-critical-duplicates.sh  check-generated-examples.sh  mutation-proof-core.sh  reproducible.sh
sigil_rt/: Cargo.toml
sigil_rt/src/: lib.rs  (+1 more)
sigilc/: Cargo.toml
sigilc/src/: ast.rs  check.rs  codegen.rs  diagnostics.rs  ir.rs  lib.rs  main.rs  sigil.pest
sigilc/src/analysis/: check.rs  ir.rs  level2.rs  level3.rs  level4.rs  levels.rs  mod.rs  reference.rs  residual.rs  topology.rs  typecheck.rs  types.rs
sigilc/src/backend/: codegen.rs  graph.rs  mod.rs  output.rs
sigilc/src/frontend/: ast.rs  format.rs  mod.rs  sigil.pest
sigilc/tests/: artifact_compatibility.rs  chaos_regression.rs  properties.rs
sigilc/tests/fixtures/abi_v1/: effects.json  input.sigil
sigilc/tests/fixtures/abi_v2/: effects.json  input.sigil
sigilc/tests/fixtures/abi_v3/: effects.json
sigilc/tests/fixtures/abi_v4/: effects.json  input.sigil
sigilc/tests/fixtures/abi_v5/: effects.json
(+52 files in other folders)
