[package]
name = "sigil-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sigilc = { path = "../sigilc" }

[workspace]
members = ["."]

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false

[[bin]]
name = "checker"
path = "fuzz_targets/checker.rs"
test = false
doc = false

[[bin]]
name = "topology"
path = "fuzz_targets/topology.rs"
test = false
doc = false

[[bin]]
name = "level3"
path = "fuzz_targets/level3.rs"
test = false
doc = false

[[bin]]
name = "level4"
path = "fuzz_targets/level4.rs"
test = false
doc = false

[[bin]]
name = "codegen"
path = "fuzz_targets/codegen.rs"
test = false
doc = false
