[package]
name = "sigilc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Compiler for the Sigil language — fault-tolerant systems by construction"
license.workspace = true

[[bin]]
name = "sigilc"
path = "src/main.rs"

[dependencies]
pest = "=2.7.0"
pest_derive = "=2.7.0"
anyhow = "1.0"
